@@ -29,7 +29,7 @@
 
     <artifactId>beam-landsat-reader</artifactId>
     <name>BEAM Landsat Reader</name>
-    <version>1.4.1.${beam.version}</version>
+    <version>1.4.2-SNAPSHOT.${beam.version}</version>
     <url>http://envisat.esa.int/beam/</url>
 
     <dependencies>
