@@ -1,7 +1,7 @@
 <module>
     <manifestVersion>1.0.0</manifestVersion>
     <symbolicName>beam-landsat-reader</symbolicName>
-    <version>1.4.1</version>
+    <version>1.4.2</version>
     <name>Landsat Product Reader</name>
     <description>
         A product reader for Landsat files. It supports the instruments MSS of Landsat 1-5, TM of Landsat 4 and 5, ETM+ of Landsat 7
@@ -15,6 +15,8 @@
 
     <changelog>
         <![CDATA[
+        Changes in 1.4.2:<br/>
+            [BEAM-1604] Wavelength values for Landsat need to be updated<br/>
         Changes in 1.4.1:<br/>
             [BEAM-1572] Landsat 5 TM in Fast format can have wrong scaling and offset<br/>
             [BEAM-1558] Support MSS data products of Landsat 1-5<br/>
